<resources>
    <string name="version_name">2.0.4 BETA</string>
    <string name="beta_build">false</string>
    <string name="app_name">UpNixtX</string>
    <string name="facebook_app_id">1395423797377264</string>
    <string name="debug_map_key">AIzaSyBtkrNrWlpuCCcRB_hyNxkTYHS2uQPA4M0</string>
    <string name="gcm_sender_id">245269118842</string>
    <string name="uber_client_id">rQPqAE0gqRwK7Ps0kfljsCLSEHOyNTDB</string>
    <string name="uber_client_secret">ioqwF8UYRbeJPgYeizoFCg3ZC_XiFWrDGO8YPgRp</string>
    <string name="uber_server_token">xytB7gYN8ZQv-TIw3OqF5_f3tm5gCDap51Ga8fND</string>
    <string name="adapter_golist_photo_size">280</string>
    <string name="splash_welcome_to">Welcome to</string>
    <string name="splash_slogan">Your Go List to take you places</string>
    <string name="splash_start_exploring">Start Exploring</string>
    <string name="splash_have_account">Have an account?</string>
    <string name="splash_sign_in">Sign In</string>
    <string name="walkthrough_1_title">Make Go Lists your guide</string>
    <string name="walkthrough_2_title">Discover and share experiences</string>
    <string name="walkthrough_3_title">Get going in a jiffy</string>
    <string name="walkthrough_1_desc">Go Lists are your to-do list for places… Save\nlists you like or create your own.</string>
    <string name="walkthrough_2_desc">Life\'s about exploring…see and share the world\nwith others.</string>
    <string name="walkthrough_3_desc">Be gone in 60 seconds with car, restaurant, and\nhotel reservations at your fingertips.</string>
    <string name="signin_options_facebook">Facebook</string>
    <string name="signin_options_twitter">Twitter</string>
    <string name="signin_options_wechat">WeChat</string>
    <string name="toolbar_title_signin">Welcome Back</string>
    <string name="toolbar_title_signup">Create Account</string>
    <string name="toolbar_title_forget_pwd">Forget Password</string>
    <string name="onboarding_golist_1">Sounds Good</string>
    <string name="onboarding_golist_1_title">Go List the World</string>
    <string name="onboarding_golist_1_desc">Go List are your to-do list for places. Explore, create, and share Go Lists of great (or not-so-great) places here.</string>
    <string name="onboarding_golist_2">Got it!</string>
    <string name="onboarding_golist_2_title">Select cities from all over the world</string>
    <string name="onboarding_golist_2_desc">Select cities or neighbourhood to explore\nfrom here</string>
    <string name="onboarding_golist_3">Give UpNixt access to your location</string>
    <string name="onboarding_golist_3_title">Explore Nearby Places</string>
    <string name="onboarding_golist_3_desc">UpNixt helps you find places for your next great experience. Enable location services to let us show you what\’s nearby.</string>
    <string name="label_not_now">Not Now</string>
    <string name="hint_signup_first_name">First Name</string>
    <string name="hint_signup_last_name">Last Name</string>
    <string name="hint_signup_email">Email</string>
    <string name="hint_signup_username">Username</string>
    <string name="hint_signup_password">Password</string>
    <string name="hint_signup_cpassword">Confirm Password</string>
    <string name="hint_signup_have_acc">Already have account?</string>
    <string name="action_signup">Join UpNixt</string>
    <string name="hint_golist_name">GoList Name</string>
    <string name="label_donthaveacc">Don\'t have an account?</string>
    <string name="label_alternative">or Log in using the following</string>
    <string name="label_forget_pwd">Fill out your email below and instruction to reset your password will be emailed to you.</string>
    <string name="action_search">Search</string>
    <string name="action_create_list">Create Go List</string>
    <string name="action_add_place_list">Add Place to Go List</string>
    <string name="action_check_in">Check In</string>
    <string name="action_create_moment">Post Moment</string>
    <string name="action_post">Post</string>
    <string name="login_email">Email Address</string>
    <string name="login_forgot_password">Forget Password?</string>
    <string name="error_empty_first_name">Enter first name.</string>
    <string name="error_empty_last_name">Enter last name.</string>
    <string name="error_password_not_match">Password do not match.</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="login_unsuccessful">Login unsuccessful.</string>
    <string name="login_canceled">Login attempt canceled.</string>
    <string name="reset_pwd_sent_to_email">An email with password reset instructions has been sent to your email address.</string>
    <string name="logout_successful">Logout successfully</string>
    <string name="logout_unsuccessful">Logout unsuccessful.</string>
    <string name="password_successful">Update password successfully</string>
    <string name="password_unsuccessful">Update password unsuccessful.</string>
    <string name="cancel">Cancel</string>
    <string name="hint_search_city">Search city</string>
    <string name="hint_report_user_details">Provide a specific description</string>
    <string name="users">PEOPLE</string>
    <string name="go_lists">GO LIST</string>
    <string name="current_location">Current Location</string>
    <string name="filter_new">New</string>
    <string name="cat_eat">Eat</string>
    <string name="cat_shop">Shop</string>
    <string name="cat_play">Play</string>
    <string name="cat_stay">Stay</string>
    <string name="title_moment">Moment</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="show_comments">Show previous comments…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rate">Rate</string>
    <string name="post">Post Moment</string>
    <string name="check_in">Check-in</string>
    <string name="go_list">Go List</string>
    <string name="moments">MOMENTS</string>
    <string name="load_more">Load More</string>
    <string name="tab_following">FOLLOWING</string>
    <string name="tab_notification">YOU</string>
    <string name="map">Map</string>
    <string name="filter">Filter</string>
    <string name="create_new_place">Create A New Place</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address_small">Address</string>
    <string name="done">Done</string>
    <string name="phone_number_small">Phone Number</string>
    <string name="rating">Ratings</string>
    <string name="sort_by">Sort By</string>
    <string name="sort">Sort</string>
    <string name="filter_relevance">Relevance</string>
    <string name="filter_distance">Distance</string>
    <string name="filter_rating">Rating</string>
    <string name="filter_by">Filter By</string>
    <string name="edit_request_sent">Got it.</string>
    <string name="other_info_upnixt">Other Information for UpNixt</string>
    <string name="not_closed">Not closed</string>
    <string name="permanently_closed">Permanently closed</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="notes">Notes</string>
    <string name="report_as_spam">Report As Spam</string>
    <string name="report_user">Report User</string>
    <string name="report_moment">Report Moment</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="copy_golist_title">Name Your GoList</string>
    <string name="copy_golist">copy golist</string>
    <string name="copy">Copy</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="add_tip_instruction">Add a tip or recommendation (optional)</string>
    <string name="prof_image">Profile Image</string>
    <string name="rating_saved">Rating saved.</string>
    <string name="you">You</string>
    <string name="world">World</string>
    <string name="upvote">Upvote</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="delete_review_question">Do you want to delete your rating?</string>
    <string name="report_this_review">Report this Review</string>
    <string name="spam_abusive_inapproriate_content">Abusive or inappropriate content</string>
    <string name="spam_scam">Spam or scam</string>
    <string name="spam_invades_privacy">Invades my privacy</string>
    <string name="spam_other_legal">Other legal claim</string>
    <string name="delete_spam">Delete Spam</string>
    <string name="add_to_go_list">Add to Go List</string>
    <string name="poll_image">Poll Image</string>
    <string name="see_more">See More</string>
    <string name="see_less">See Less</string>
    <string name="see_all">See All</string>
    <string name="upvotes">Upvotes</string>
    <string name="collaborators">Collaborators:</string>
    <string name="collaborators_title">Collaborators</string>
    <string name="menu_drawer">Menu Drawer</string>
    <string name="followers">Followers</string>
    <string name="network">Network</string>
    <string name="places_cap">Places</string>
    <string name="been_there_cap">Been There</string>
    <string name="place">Place</string>
    <string name="ratings_tips">Ratings</string>
    <string name="golists_cap">Go Lists</string>
    <string name="edit_moment">Edit Moment</string>
    <string name="view_information">View Information</string>
    <string name="today">Today</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="delete_place_confirmation">Are you sure you want to delete this place?</string>
    <string name="delete_divider_confirmation">Are you sure you want to delete this label?</string>
    <string name="delete_note_confirmation">Are you sure you want to delete this note?</string>
    <string name="delete_sticker_confirmation">Are you sure you want to delete this stickerCollection?</string>
    <string name="delete_comment_confirmation">Are you sure you want to delete this comment?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="signup_or_login_label">Sign up or log in to personalize UpNixt</string>
    <string name="skip_login">Skip Login</string>
    <string name="create_account_label">By creating an account, you agree to our</string>
    <string name="terms_of_service">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="error_password_min_length">Password length should have minimum of 8 characters.</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="log_in">Log in</string>
    <string name="submit">Submit</string>
    <string name="change_location">Change Location</string>
    <string name="view_access">View Access</string>
    <string name="view_access_">View Access\nWho can view this Go List?</string>
    <string name="view_collaborator_">Add Collaborators\nInvite people to contribute to this Go List</string>
    <string name="view">View</string>
    <string name="more">More</string>
    <string name="activity">Activity</string>
    <string name="beginner">Beginner</string>
    <string name="suggested_location">Suggested Locations</string>
    <string name="recently_selected">Recently Selected</string>
    <string name="no_recently_selected">No recently selected</string>
    <string name="im_looking_for">I\'m looking for</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="detecting_location">Detecting Location…</string>
</resources>