<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_marginBottom="10dp"
    >
    <ImageView
        android:id="@+id/golist_cover_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/go_list"
        android:layout_alignParentTop="true"
        android:background="@drawable/placeholder_golist"
        />
    <RelativeLayout
        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/opaque_70_black_bg"
        >

        <ImageView
            android:id="@+id/imageBookmark"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/bookmarks"
            />

        <View
            android:id="@+id/v"
            android:layout_toLeftOf="@id/imageBookmark"
            android:layout_toStartOf="@id/imageBookmark"
            android:layout_width="0.5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/secondary_text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/v"
            android:layout_toStartOf="@id/v"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            >

            <com.pentagon.retrofitexample.font.TextView_Body2
                android:id="@+id/golist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@android:color/white" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2dp"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_place_white_18dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/go_list"
                    />
                <com.pentagon.retrofitexample.font.TextView_Caption
                    android:id="@+id/golist_places_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    />

                <ImageView
                    android:id="@+id/imgUpvote"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/v2_upvote_filled"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/upvote"
                    />

                <com.pentagon.retrofitexample.font.TextView_Caption
                    android:id="@+id/golist_upvote_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="2dp"
                    android:layout_marginStart="2dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/collaborators_frameview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/poll_image"
        android:layout_above="@id/info_bar"
        />
</RelativeLayout>